# hw3-MarcelGunadi

./: .gitignore  Makefile  README.md  ai_documentation.txt  homepage.md  myst.yml  pyproject.toml
ligotools/: utils.py
ligotools.egg-info/: PKG-INFO  requires.txt
ligotools/tests/: test_readligo.py  test_utils.py
